# RelayTesterRaspberry

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  colors.csv  config.h  deploy-rpi.sh  main.cpp  mainwindow.ui  rpi-deploy.env.example  styles.css
JSON_relays/: relay_schema.json
JSON_relays/AXICOM/: v23062-B0029.json
JSON_relays/Self Test/: manual_board.json
JSON_relays/TEC/: 1804820000.json
cmake/toolchains/: raspi3-bullseye.cmake  raspi3-crosscompile.cmake
src/: calibration.ui
src/UI/: navigator.cpp  navigator.h  styles.css  styling.h
src/UI/models/: relaylistmodel.cpp  relaylistmodel.h
src/UI/screens/: calibrationscreen.ui  homescreen.cpp  homescreen.ui  mainWindow.cpp  mainWindow.h  mainWindow.ui  relaymeasurescreen.cpp  relaymeasurescreen.h  relaymeasurescreen.ui  relayselectscreen.cpp  relayselectscreen.h  relayselectscreen.ui
src/UI/widgets/: adc24reading.cpp  adc24reading.h  adc24reading.ui  contactselectwidget.cpp  contactselectwidget.ui  dynamicswidget.cpp  dynamicswidget.h  dynamicswidget.ui  led.cpp  powersupplysetupwidget.cpp  powersupplysetupwidget.h  powersupplysetupwidget.ui
src/controls/: coilcontrol.cpp  coilcontrol.h  contactselector.cpp  contactselector.h  currentadjuster.cpp  currentadjuster.h  dynamicreadings.cpp  dynamicreadings.h  dynamicswitch.cpp  dynamicswitch.h  logbus.cpp  logbus.h  navigator.cpp  navigator.h  powercontrol.cpp  powercontrol.h  readings.cpp  readings.h  staticreadings.cpp  staticreadings.h
src/widgets/: calibration.cpp  calibration.ui  calibrationscreen.cpp  calibrationscreen.h  calibrationscreen.ui  contactselectwidget.cpp  contactselectwidget.h  contactselectwidget.ui  homescreen.cpp  homescreen.h  homescreen.ui  led.cpp  led.h  mainWindow.cpp  mainWindow.h  mainWindow.ui  powersupplysetupwidget.ui
unit-tests/: CMakeLists.txt  CMakePresets.json  README.md
unit-tests/tests/: CMakeLists.txt  main.cpp  test_contactselector.cpp  test_dynamicreadings.cpp  test_powercontrol.cpp  test_relaylistmodel.cpp
